# labscript

./: .gitignore  .hgignore  Install Guide.docx  README.md  Using the labscript API.docx  __init__.py  analoguetest.py  calibrate_shutters.py  calibrations.h5  control.py  devices.py  dummy.fresh.h5  dummy.py  example.py  functions.py  labscript.py  novatech.py  novatechserial.py  pulseblaster.py  pyproject.toml  reader.py  setup.cfg  setup.py  spinapi.py  spinconfig.py  test2.vi
.github/workflows/: release-vars.sh  release.yml
deviceprogramming/: novatech.py  pulseblaster.py
devices/: __init__.py  adwin.py  photoncounter.py  sr400photoncounter.py
docs/: Makefile  make.bat
docs/labscript-dev/: clock_example.py  header.tex  main.tex
docs/source/: conf.py  connection_table.rst  index.rst  introduction.rst
docs/source/_templates/: autosummary-module.rst
docs/source/api/: device.rst  index.rst  intermediatedevice.rst  pseudoclockdevice.rst
docs/source/api_reference/: clockline.rst  index.rst  pseudoclock.rst
labscript/: __init__.py  __version__.py  base.py  base_device.py  compiler.py  constants.py  core.py  functions.py  inputs.py  labscript.py  outputs.py  remote.py  utils.py
labscript/devices/: adwin.py  sr400photoncounter.py
source/BLACS/How to add a new device/: main.tex  pythonlisting.tex
source/labscript-dev/: intermediatedevice_example.py  main.tex
source/lyse/: header.tex  listing_1.py  listing_2.py  listing_3.py  lyse.tex
utils/: calibrate_shutters.py  dummy.py  edit_connections.py  h5_from_globals.py
