[metadata]
name = labscript
description = The labscript compiler — expressive control of harware-timed experiments
long_description = file: README.md
long_description_content_type = text/markdown
author = The labscript suite community
author_email = labscriptsuite@googlegroups.com
url = http://labscriptsuite.org
project_urls = 
    Source Code=https://github.com/labscript-suite/labscript
    Download=https://github.com/labscript-suite/labscript/releases
    Tracker=https://github.com/labscript-suite/labscript/issues
keywords = experiment control automation
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5
install_requires =
  labscript_utils>=2.14.0
  numpy>=1.15
  scipy
  matplotlib
setup_requires =
  setuptools_scm

[dist_conda]
pythons = 3.6, 3.7, 3.8
platforms = linux-64,win-32,win-64,osx-64
force_conversion = True
