[metadata]
name = labscript
description = The labscript compiler — expressive control of harware-timed experiments
long_description = file: README.md
long_description_content_type = text/markdown
author = The labscript suite community
author_email = labscriptsuite@googlegroups.com
url = http://labscriptsuite.org
project_urls = 
    Source Code=https://github.com/labscript-suite/labscript
    Download=https://github.com/labscript-suite/labscript/releases
    Tracker=https://github.com/labscript-suite/labscript/issues
keywords = experiment control automation
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
  importlib_metadata
  labscript_utils>=3.3.0
  numpy>=1.15
  scipy
  matplotlib

[options.extras_require]
docs = 
  PyQt5
  Sphinx==7.2.6
  sphinx-rtd-theme==2.0.0
  myst_parser==2.0.0
